deploy: 59f0fdf8e8eb149474a51424042119c785cd9e56

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -116,7 +116,6 @@ ul.task-list li input[type="checkbox"] {
   <ul class="collapse">
   <li><a href="#day-1-sun-sept-28" id="toc-day-1-sun-sept-28" class="nav-link" data-scroll-target="#day-1-sun-sept-28">Day 1 – Sun Sept 28</a></li>
   <li><a href="#day-2-mon-sept-29" id="toc-day-2-mon-sept-29" class="nav-link" data-scroll-target="#day-2-mon-sept-29">Day 2 – Mon Sept 29</a></li>
-  <li><a href="#days-37-sept-30-to-oct-4-camino-francés-last-115-km" id="toc-days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="nav-link" data-scroll-target="#days-37-sept-30-to-oct-4-camino-francés-last-115-km">Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)</a></li>
   <li><a href="#day-8-sun-oct-5" id="toc-day-8-sun-oct-5" class="nav-link" data-scroll-target="#day-8-sun-oct-5">Day 8 – Sun Oct 5</a></li>
   <li><a href="#day-9-mon-oct-6" id="toc-day-9-mon-oct-6" class="nav-link" data-scroll-target="#day-9-mon-oct-6">Day 9 – Mon Oct 6</a></li>
   <li><a href="#day-10-tue-oct-7" id="toc-day-10-tue-oct-7" class="nav-link" data-scroll-target="#day-10-tue-oct-7">Day 10 – Tue Oct 7</a></li>
@@ -198,20 +197,12 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><strong>Daily Summary — Sept 29</strong><br>
+<p>Daily Summary — Sept 29<br>
 The travel into Galicia was a bit of an adventure. My flight into Madrid was delayed, which made me miss my original train. I caught a later one, but even that got interrupted because wildfires had closed part of the tracks, so we all had to switch to a bus for the last stretch. By the time I finally made it to Sarria about 9:30 pm, I was ready to settle in. I checked into my hostel and had a pilgrim dinner with a new friend from Salamanca who arrived around the same time. The meal was classic Galician: caldo gallego, Estrella beer, and roasted pork. Galicia is famous for its rain, but so far the weather has been unexpectedly kind. I also got my pilgrim credential and my very first stamp—fittingly, at the restaurant where I ate dinner.</p>
 </div>
 </div>
-</section>
-<section id="days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="level3">
-<h3 class="anchored" data-anchor-id="days-37-sept-30-to-oct-4-camino-francés-last-115-km">Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)</h3>
-<ul>
-<li><strong>Day 3 (Sept 30):</strong> Sarria → Portomarín (~22 km)
-<ul>
-<li>Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir.</li>
-<li>Overnight: <strong>Pensión Albergue Gonzar</strong></li>
-</ul></li>
-</ul>
+<p>-### Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km) - Walking total for this section: ~115 km / 71 mi - <strong>Day 3 (Sept 30):</strong> Sarria → Portomarín (~22 km / 13.7 mi)<br>
+- Route highlights: shaded hamlets around Barbadelo; Ferreiros (Km 100 milestone); Mercadoiro/Vilachá; descent to the Miño River and rebuilt Portomarín (Church of San Nicolás). - Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir. - Overnight: <strong>Pensión Albergue Gonzar</strong></p>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
@@ -222,15 +213,15 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><strong>Daily Summary — Sept 30</strong><br>
+<p>Daily Summary — Sept 30<br>
 First walking day on the Camino: Sarria to Portomarín, about 22 km. We set out before the sun because my walking partner didn’t have reservations and needed to be sure to claim one of the first-come beds. The trail was wrapped in fog almost the whole morning until the sun finally burned through. Along the way we met another pilgrim from Madrid who decided to join us after overhearing Guillermo joke that the village we were passing looked like something straight out of the Resident Evil video game. We stopped for a pilgrim breakfast at Mirador da Brea, then pushed on to Portomarín.</p>
 <p>When I got to my hostel, I did the usual Camino routine: shower, laundry in the sink, and then a much-needed nap. Later in the afternoon I wandered through the old town of Portomarín, which was rebuilt stone by stone on higher ground after a dam project flooded the original village in the 1960s. Now I’m back on the albergue patio with a café con leche, enjoying the quiet before heading out for dinner.</p>
 </div>
 </div>
 <ul>
-<li><strong>Day 4 (Oct 1):</strong> Portomarín → Palas de Rei (~25 km)
+<li><strong>Day 4 (Oct 1):</strong> Portomarín → Palas de Rei (~25 km / 15.5 mi)
 <ul>
-<li>Pass historic pilgrim hospices at Hospital de la Cruz and end in Palas de Rei, whose Church of San Tirso preserves remarkable medieval carvings.</li>
+<li>Route highlights: Hospital da Cruz and Gonzar; Ligonde; A Eirexe (Igrexa de Santiago); Casanova; arrival to Palas de Rei (San Tirso church carvings).</li>
 <li>Overnight: <strong>Albergue San Marcos</strong></li>
 </ul></li>
 </ul>
@@ -244,7 +235,7 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><strong>Daily Summary — Oct 1</strong><br>
+<p>Daily Summary — Oct 1<br>
 Dinner in Portomarín last night was Galician pork on a small patio at sunset with Gabriel and Guillermo. They left earlier than I did this morning since they didn’t have reservations and needed to find open albergues. I was still up before 7:00 because the dorm room was noisy with snoring and people rustling to leave. I took a wrong turn heading out of Portomarín in the dark but corrected quickly and continued the climb out of town.</p>
 <p>I stopped at a café for tortilla francesa with cheese (an omelet on bread), a café con leche, and fresh orange juice, which is excellent here. Later in the morning the fog lifted, and the day turned sunny with clear skies.</p>
 <p>The Camino passed farms with cows, small villages of stone houses, and stretches of countryside with pine trees, rolling hills, and fields. At one crossroads I met Paul, an older man from Paris, who by coincidence I saw him again this afternoon staying at the same albergue in Palas de Rei.</p>
@@ -252,11 +243,9 @@ Dinner in Portomarín last night was Galician pork on a small patio at sunset wi
 </div>
 </div>
 <ul>
-<li><strong>Day 5 (Oct 2):</strong> Palas de Rei → Arzúa (~29 km)
+<li><strong>Day 5 (Oct 2):</strong> Palas de Rei → Arzúa (~29 km / 18.0 mi)
 <ul>
-<li>Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.<br>
-</li>
-<li>Arzúa is known for its cheese production and nearby Ribadiso hosts a medieval pilgrim hospital.</li>
+<li>Route highlights: Leboreiro’s Romanesque church; Melide (pulpo); Boente (Igrexa de Santiago); Ribadiso da Baixo with its medieval bridge and riverside albergue; entry into Arzúa (local cheeses).</li>
 <li>Overnight: <strong>Cruce de Caminos Arzúa</strong></li>
 </ul></li>
 </ul>
@@ -270,7 +259,7 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><strong>Daily Summary — Oct 2</strong><br>
+<p>Daily Summary — Oct 2<br>
 I set out in the morning with Carlos, who had stayed in my hostel. He is from San Miguel de Allende, Mexico. In the next village we stopped for breakfast of scrambled eggs with tomato, onion, and ham, which was excellent and kept me fueled for the walk. Carlos shared that he was walking the Camino because his partner of 19 years passed away from cancer in May. It was something his partner had wanted to do, and Carlos is walking in his memory while thinking about what comes next in life.</p>
 <p>We walked together until Melide, where he stopped since he is dividing the Camino into shorter stages due to leg issues. Passing through Melide, I saw many restaurants serving pulpo in different forms—including one advertising pulpo pizza—but I didn’t stop since I had already tried pulpo the previous day and it wasn’t the right time for a meal. From there I continued with Pedro from Málaga for a while. His English was limited, so we spoke in Spanish, which was a challenge for me but good practice. Later I stopped at a café for fresh orange juice and some ibuprofen. My legs were sore since this was the longest stage.</p>
 <p>I finished the day walking with Miriam from Ohio, who has been walking from France for the past 30 days. She shared that she is unsure about returning home because she is re-evaluating her marriage. Many pilgrims seem to be reflecting on big life changes—relationships, careers, and personal direction. The Camino passed through Ribadiso, where I crossed its medieval stone bridge and walked past the riverside albergue, one of the most scenic spots on this stretch.</p>
@@ -278,9 +267,9 @@ I set out in the morning with Carlos, who had stayed in my hostel. He is from Sa
 </div>
 </div>
 <ul>
-<li><strong>Day 6 (Oct 3):</strong> Arzúa → O Pedrouzo (~19 km)
+<li><strong>Day 6 (Oct 3):</strong> Arzúa → O Pedrouzo (~19 km / 11.8 mi)
 <ul>
-<li>En route visit the chapel of Santa Irene and experience the atmosphere of anticipation in O Pedrouzo as pilgrims gather for the final day.</li>
+<li>Route highlights: eucalyptus/pine lanes; Santa Irene chapel and fountain; Amenal; entry into O Pino municipality (O Pedrouzo).</li>
 <li>Overnight: <strong>Albergue REM</strong></li>
 </ul></li>
 </ul>
@@ -294,7 +283,7 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><strong>Daily Summary — Oct 3</strong><br>
+<p>Daily Summary — Oct 3<br>
 This morning my muscles were stiff and sore, so I started slowly. Many walkers passed me, including Miriam from yesterday. After a few kilometers I stopped for breakfast and saw Guillermo and his friends again before they moved ahead. Fortunately, once my muscles warmed up I was able to walk more comfortably and keep a steady pace.</p>
 <p>Much of the walk passed through eucalyptus groves, the tall trees giving shade and their distinct smell carrying on the breeze.</p>
 <p>Later I ran into Volkan from yesterday, who was walking with Dee, an Irish woman he had met the day before. We then came across three older women walking together—two cousins from Canada whose husbands had passed away, and one from Australia who said her husband had “decided to be old” and didn’t come along. They had their packs sent ahead and were taking shorter stages, but they walked at a surprisingly fast pace.</p>
@@ -303,12 +292,11 @@ This morning my muscles were stiff and sore, so I started slowly. Many walkers p
 </div>
 </div>
 <ul>
-<li><strong>Day 7 (Oct 4):</strong> O Pedrouzo → Santiago (~20 km)
+<li><strong>Day 7 (Oct 4):</strong> O Pedrouzo → Santiago (~20 km / 12.4 mi)
 <ul>
-<li>Highlights include Lavacolla, the traditional cleansing site, Monte do Gozo offering panoramic views of Santiago, and attending the Pilgrim’s Mass featuring the Botafumeiro.</li>
-<li>Collect Compostela certificate in Santiago.<br>
-</li>
-<li>Overnight: <strong>Pensión Rua Nova</strong> (Rúa Nova, 4, Santiago de Compostela).</li>
+<li>Route highlights: Lavacolla; Monte do Gozo (viewpoint often foggy); San Lázaro entry to the city; Praza do Obradoiro.</li>
+<li>Collect Compostela certificate in Santiago.</li>
+<li>Overnight: <strong>Pensión Rúa Nova</strong> (Rúa Nova, 4, Santiago de Compostela).</li>
 </ul></li>
 </ul>
 <div class="callout callout-style-default callout-note callout-titled">
@@ -321,8 +309,8 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><strong>Daily Summary — Oct 4</strong><br>
-Rain fell steadily throughout the day, but it was my sore left ankle and right knee that slowed my pace. The group I’d been having dinner with started later and eventually overtook me, and we stopped together for a café con leche before parting ways. E</p>
+<p>Daily Summary — Oct 4<br>
+Rain fell steadily throughout the day, but it was my sore left ankle and right knee that slowed my pace. The group I’d been having dinner with started later and eventually overtook me, and we stopped together for a café con leche before parting ways.</p>
 <p>I walked for a while with a German man who had started his Camino in France and later saw him again as I entered Santiago. I also came across a Danish woman I’d met a few days earlier who had also begun in France. For both of them, reaching Santiago was a major moment after weeks on the trail.</p>
 <p>I stopped at a restaurant for caldo gallego, a warm Galician soup that was a welcome break from the rain. When I reached Monte do Gozo—the traditional first viewpoint of Santiago—the fog was thick enough that I couldn’t see the city below. The final stretch into Santiago wasn’t very scenic, following the highway for a while, but entering the old town was something special. Catching the first clear glimpse of the cathedral as I approached was still inspiring.</p>
 <p>The main square was filled with pilgrims celebrating the end of their journeys—some, like me, having walked just five days, and others who had been on the road for more than a month.</p>
@@ -336,7 +324,7 @@ Rain fell steadily throughout the day, but it was my sore left ankle and right k
 <ul>
 <li>Full day in Santiago.<br>
 </li>
-<li>Overnight: <strong>Pensión Rua Nova</strong></li>
+<li>Overnight: <strong>Pensión Rúa Nova</strong></li>
 </ul>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
@@ -374,8 +362,8 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><strong>Daily Summary — Oct 6</strong><br>
-I booked a guided day tour to the coast. We visited Muros, Ézaro waterfall, the Fisterra lighthouse (“the end of the world”), the village of Finisterre, Muxía’s Sanctuary of A Barca, and Ponte Maceira with its 14th‑century Romanesque bridge. Muros was my favorite stop—a historic fishing village built up the hillside.</p>
+<p>Daily Summary — Oct 6<br>
+I booked a guided day tour to the coast. We visited Muros, Ézaro waterfall, the Finisterre lighthouse (“the end of the world”) and the village of Finisterre, Muxía’s Sanctuary of A Barca, and Ponte Maceira with its 14th‑century Romanesque bridge. Muros was my favorite stop—a historic fishing village built up the hillside.</p>
 <p>In Finisterre I had a pizza and a beer at an outdoor table overlooking the harbor. At Ézaro, the waterfall setting was beautiful, and it made me think a small boat tour out on the ría would be a great way to see this coast; something to consider for a future trip.</p>
 <p>Back in Santiago I rested, then walked up to Parque da Alameda for sunset—first over the University of Santiago and then across to the cathedral from a distance. Dinner was on a street‑side table along my hotel’s cobblestone street: a Galician meat‑and‑cheese board with a glass of vino tinto.</p>
 </div>
@@ -402,8 +390,8 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><strong>Daily Summary — Oct 7</strong><br>
-I met Carlos for breakfast at a café on the walk down to the station since we were on the same train. We took the AVE high‑speed rail back to Madrid. After checking into my hotel, I rested for a bit—my left ankle and right knee are still sore. By coincidence, friends from Grand Rapids who now live in Las Vegas were in Madrid the same night, so we met up and spent the evening sampling a few tapas spots, ending the night with churros y chocolate at Chocolatería San Ginés.</p>
+<p>Daily Summary — Oct 7<br>
+I met Carlos for breakfast at a café on the walk down to the station since we were on the same train. We took the AVE high‑speed rail back to Madrid. After checking into my hotel, I rested for a bit—my left ankle and right knee are still sore. By coincidence, a friend I worked with in Grand Rapids and now lives in Las Vegas was in Madrid the same night. I had been coordinating with her husband, so she didn’t realize I was there until she recognized me on the street—it was a fun surprise. We spent the evening sampling a few tapas spots, ending the night with churros y chocolate at Chocolatería San Ginés.</p>
 </div>
 </div>
 </section>
@@ -434,7 +422,7 @@ Note
 </div>
 <div class="callout-body-container callout-body">
 <p>Daily Summary — Oct 8<br>
-I walked to Sol Cercanías station and took the Cercanías to to the airport via a transfer at Chamartín. Getting through the airport was smooth, though I have heard at other times passport control can be backed up. I stopped by the lounge for yogurt and a cappuccino, then boarded and took a good nap on the plane.</p>
+I walked to Sol Cercanías station and took the Cercanías to the airport via a transfer at Chamartín. Getting through the airport was smooth, though I have heard at other times passport control can be backed up. I stopped by the lounge for yogurt and a cappuccino, then boarded and took a good nap on the plane.</p>
 <p>I really enjoyed this trip and plan to do it again—possibly the Camino Portugués next time. I don’t see myself doing a full 30-day walk, but I could see adding a few more days beyond the “minimum” in the future.</p>
 </div>
 </div>
@@ -659,7 +647,7 @@ I walked to Sol Cercanías station and took the Cercanías to to the airport via
 </li>
 <li>Booking.com Confirmation: <strong>6475.800.457</strong> | PIN: <strong>7342</strong></li>
 </ul></li>
-<li><strong>Oct 4–6 — Santiago de Compostela: Pensión Rúa Nova</strong>
+<li><strong>Oct 4–5 — Santiago de Compostela: Pensión Rúa Nova</strong>
 <ul>
 <li>Address: Rúa Nova, 4, 15705 Santiago de Compostela, Spain<br>
 </li>
@@ -668,6 +656,12 @@ I walked to Sol Cercanías station and took the Cercanías to to the airport via
 <li>Reservation: <strong>#6216069981</strong> (via Booking.com)<br>
 </li>
 <li><strong>Check-in / key pickup:</strong> Hotel Rúa Villar, Rúa do Vilar 8–10 (24h reception); Phone: +34 981 519 858</li>
+</ul></li>
+<li><strong>Oct 6 — Santiago de Compostela: Hotel Rúa Villar</strong>
+<ul>
+<li>Address: Rúa do Vilar 8–10, 15705 Santiago de Compostela, Spain<br>
+</li>
+<li>Phone: +34 981 519 858</li>
 </ul></li>
 <li><strong>Oct 7 — Madrid: Petit Palace Plaza Mayor</strong>
 <ul>
