--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -116,6 +116,7 @@ ul.task-list li input[type="checkbox"] {
   <ul class="collapse">
   <li><a href="#day-1-sun-sept-28" id="toc-day-1-sun-sept-28" class="nav-link" data-scroll-target="#day-1-sun-sept-28">Day 1 – Sun Sept 28</a></li>
   <li><a href="#day-2-mon-sept-29" id="toc-day-2-mon-sept-29" class="nav-link" data-scroll-target="#day-2-mon-sept-29">Day 2 – Mon Sept 29</a></li>
+  <li><a href="#days-37-sept-30-to-oct-4-camino-francés-last-115-km" id="toc-days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="nav-link" data-scroll-target="#days-37-sept-30-to-oct-4-camino-francés-last-115-km">Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)</a></li>
   <li><a href="#day-8-sun-oct-5" id="toc-day-8-sun-oct-5" class="nav-link" data-scroll-target="#day-8-sun-oct-5">Day 8 – Sun Oct 5</a></li>
   <li><a href="#day-9-mon-oct-6" id="toc-day-9-mon-oct-6" class="nav-link" data-scroll-target="#day-9-mon-oct-6">Day 9 – Mon Oct 6</a></li>
   <li><a href="#day-10-tue-oct-7" id="toc-day-10-tue-oct-7" class="nav-link" data-scroll-target="#day-10-tue-oct-7">Day 10 – Tue Oct 7</a></li>
@@ -201,8 +202,18 @@ Note
 The travel into Galicia was a bit of an adventure. My flight into Madrid was delayed, which made me miss my original train. I caught a later one, but even that got interrupted because wildfires had closed part of the tracks, so we all had to switch to a bus for the last stretch. By the time I finally made it to Sarria about 9:30 pm, I was ready to settle in. I checked into my hostel and had a pilgrim dinner with a new friend from Salamanca who arrived around the same time. The meal was classic Galician: caldo gallego, Estrella beer, and roasted pork. Galicia is famous for its rain, but so far the weather has been unexpectedly kind. I also got my pilgrim credential and my very first stamp—fittingly, at the restaurant where I ate dinner.</p>
 </div>
 </div>
-<p>-### Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km) - Walking total for this section: ~115 km / 71 mi - <strong>Day 3 (Sept 30):</strong> Sarria → Portomarín (~22 km / 13.7 mi)<br>
-- Route highlights: shaded hamlets around Barbadelo; Ferreiros (Km 100 milestone); Mercadoiro/Vilachá; descent to the Miño River and rebuilt Portomarín (Church of San Nicolás). - Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir. - Overnight: <strong>Pensión Albergue Gonzar</strong></p>
+</section>
+<section id="days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="level3">
+<h3 class="anchored" data-anchor-id="days-37-sept-30-to-oct-4-camino-francés-last-115-km">Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)</h3>
+<ul>
+<li>Walking total for this section: ~115 km / 71 mi</li>
+<li><strong>Day 3 (Sept 30):</strong> Sarria → Portomarín (~22 km / 13.7 mi)
+<ul>
+<li>Route highlights: shaded hamlets around Barbadelo; Ferreiros (Km 100 milestone); Mercadoiro/Vilachá; descent to the Miño River and rebuilt Portomarín (Church of San Nicolás).</li>
+<li>Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir.</li>
+<li>Overnight: <strong>Pensión Albergue Gonzar</strong></li>
+</ul></li>
+</ul>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
